[package]
name = "tloc"
version = "0.1.3"
edition = "2024"
rust-version = "1.85"
description = "Lines of code counter with tree-style output"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/tloc"
keywords = ["cloc", "tokei", "loc", "code-analysis", "cli"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/quark-zju/tloc"

[dependencies]
globset = { version = "0.4", default-features = false }
ignore = "0.4"
pico-args = "0.5.0"
tokei = { version = "14", default-features = false }
